# tsdesktop

./: LICENSE  README.md  TODO
Arduino/libraries/: TEADME_TXT  tsd_drivers  tsd_gfx  tsd_gpio_8bitp  tsd_media  tsd_pio_8bitp  tsd_pio_spi  tsd_tft  tsd_utils  tsdesktop
Arduino/libraries_esp32/: README.md
Arduino/libraries_esp8266/: README.md
Arduino/libraries_pic32/: README.md
Arduino/libraries_rp2040/: README.md  tsd_gpio_8bitp  tsd_pio_8bitp  tsd_pio_spi
Arduino/libraries_stm32/: README.md
TSD_GFX/: TSD_GFX.cpp  TSD_GFX.h  TSD_SCREEN.cpp  TSD_SCREEN.h  font.cpp  font.h  gfxfont.h  glcdfont.c.h  rgb.cpp  rgb.h
TSD_GFX/Fonts/: TSD_FreeMonoBoldOblique_24pt.h  TSD_FreeMonoBold_12pt.h  TSD_FreeMonoBold_18pt.h  TSD_FreeMonoOblique_24pt.h  TSD_FreeSansBoldOblique_9pt.h  TSD_FreeSansBold_12pt.h  TSD_FreeSansBold_9pt.h  TSD_FreeSansOblique_18pt.h  (+8 more)
TSD_ILI9341/: TSD_ILI9341.cpp  TSD_ILI9341.h
drivers/: ILI9341_Regs.h  TFT_GC9A01.cpp  TFT_GC9A01.h  TFT_HX8357B.cpp  TFT_HX8357B.h  TFT_HX8357C.cpp  TFT_HX8357C.h  TFT_HX8357D.cpp  TFT_HX8357D.h  TFT_ILI9341.cpp  TFT_ILI9341.h  TFT_ILI9481_1.cpp  TFT_ILI9481_1.h  TFT_ILI9481_AUO317.cpp  TFT_ILI9481_AUO317.h  TFT_ILI9481_CMO35.cpp  TFT_ILI9481_CMO35.h  TFT_ILI9481_CPT29.cpp  TFT_ILI9481_CPT29.h  TFT_ILI9481_PVI35.cpp  TFT_ILI9481_PVI35.h  TFT_ILI9481_RGB.cpp  TFT_ILI9481_RGB.h  TFT_ILI9481_YA1.cpp  TFT_ILI9481_YA1.h  TFT_ILI9481_YA2.cpp  TFT_ILI9481_YA2.h  TFT_ILI9486.cpp  TFT_ILI9486.h  TFT_ILI9488.cpp  TFT_ILI9488.h  TFT_ILI9x81.cpp  TFT_ILI9x81.h  TFT_ILI9xxx.cpp  TFT_ILI9xxx.h  TFT_R61581.cpp  TFT_R61581.h  TFT_RM68140.cpp  TFT_RM68140.h  TFT_SSD1963_480.cpp  (+13 more)
gfx/: BufferedDisplay.cpp  BufferedDisplay.h  TSD_CHAR.cpp  TSD_CHAR.h  TSD_GFX.cpp  TSD_GFX.h  TSD_SCREEN.cpp  TSD_SCREEN.h  TSD_Smooth.c.hh  TSD_Smooth.h.hh  font.cpp  font.h  gfxfont.h  glcdfont.c.h  overlaid.h  rgb.cpp  rgb.h  t_clip.cpp  t_clip.h  t_cmap.cpp  t_cmap.h  t_cursor.h  t_gradient.h  tsd_font.cpp  tsd_font.h  tsd_gfxfont.h
licenses/: Adafruit_gfx_license.txt  RobTillaart_license.txt
media/: Display.h  Media.h  Touch.cpp  Touch.h  Touch.hh  Touch_Rotation.hh  media.cpp
pico-sdk/: CMakeLists.txt
pico-sdk/examples/Smooth_Graphics_Demo/: CMakeLists.txt  Smooth_Graphics_Demo.cpp
pico-sdk/examples/boing_ball/: CMakeLists.txt  boing_ball.cpp
pico-sdk/examples/calculator/: CMakeLists.txt  calculator.cpp
pico-sdk/examples/canvas1/: CMakeLists.txt  canvas1.cpp
pico-sdk/examples/canvas2/: CMakeLists.txt  canvas2.cpp
pico-sdk/examples/canvas3/: CMakeLists.txt  canvas3.cpp
pico-sdk/examples/checkboxes/: CMakeLists.txt  checkboxes.cpp
pico-sdk/examples/idyll/: CMakeLists.txt  idyll.cpp
pico-sdk/examples/ili9341_diag/: CMakeLists.txt  ili9341_diag.cpp
pico-sdk/examples/menu1/: CMakeLists.txt  menu1.cpp
pico-sdk/examples/menu2/: CMakeLists.txt  menu2.cpp
pico-sdk/examples/menu3/: CMakeLists.txt  menu3.cpp
pico-sdk/examples/programmer/: CMakeLists.txt  Pgms.cpp  programmer.cpp
pico-sdk/examples/quadraball/: CMakeLists.txt  quadraball.cpp
pico-sdk/examples/scroll1/: CMakeLists.txt  scroll1.cpp
pico-sdk/examples/scroller/: CMakeLists.txt  scroller.cpp
pico-sdk/examples/spider/: CMakeLists.txt  spider.cpp
pico-sdk/examples/spider2/: CMakeLists.txt  spider2.cpp
pico-sdk/libs/desktop/: CMakeLists.txt
pico-sdk/libs/devices/flash/: PicoFlash.cpp
pico-sdk/libs/devices/pcf8575/: TSD_PCF8575.cpp  TSD_PCF8575.h
pico-sdk/libs/devices/spfd5408/: CMakeLists.txt  TSD_SPFD5408.h
pico-sdk/libs/devices/xpt2046/: CMakeLists.txt  TSD_XPT2046.cpp
pico-sdk/libs/display/: CMakeLists.txt  TSD_GFX.cpp  TSD_GFX.h  TSD_ILI9341.cpp  TSD_ILI9341.h  TSD_ILI9341_SPI.h  buf16.cpp  buf16.h  glcdfont.c  rgb.cpp  rgb.h
pico-sdk/libs/drivers/: CMakeLists.txt
pico-sdk/libs/ds3231/: CMakeLists.txt  TSD_DS3231.cpp  TSD_DS3231.h
pico-sdk/libs/env/: Arduino.h  CMakeLists.txt  Picoino.cpp  SerialUSB.h  Wire.h  env.h  rp2040_dma.hh  rp2040_i2c.h  rp2040_pio.h  rp2040_spi.h
pico-sdk/libs/env/api/: Common.h
pico-sdk/libs/env/avr/: dtostrf.cpp  dtostrf.h
pico-sdk/libs/flash/: CMakeLists.txt  PicoFlash.cpp
pico-sdk/libs/gfx/: CMakeLists.txt
pico-sdk/libs/ili9341/: CMakeLists.txt
pico-sdk/libs/media/: CMakeLists.txt
pico-sdk/libs/pcf8575/: CMakeLists.txt  TSD_PCF8575.cpp  TSD_PCF8575.h
pico-sdk/libs/protocols/gpio_8bitp/: CMakeLists.txt
pico-sdk/libs/protocols/pio_8bitp/: CMakeLists.txt
pico-sdk/libs/protocols/pio_spi/: CMakeLists.txt
pico-sdk/libs/protocols/spi/: CMakeLists.txt
pico-sdk/libs/setup/: Arduino.h  CMakeLists.txt  Display.cpp  Display.h  Picoino.cpp  Picoino.h  RP2040_TFT_SPI.cpp  RP2040_TFT_SPI.h  Setup.cpp  Setup.h  Setup_RP2040_GPIO_8BITP_ILI9488.h  Setup_RP2040_GPIO_8BITP_ILI9488_1.h  Setup_RP2040_GPIO_8BITP_RM68140.h  Setup_RP2040_PIO_8BITP_ILI9488.h  Setup_RP2040_PIO_SPI_ILI9341.h  Setup_RP2040_PIO_SPI_ST7789.h  Setup_RP2040_SPI_ST7789.h  Setup_RP2040_SPI_ST7796.h  Touch.cpp  Touch.h  Wire.cpp  Wire.h
pico-sdk/libs/tft/: CMakeLists.txt
pico-sdk/libs/tft_espi/: CMakeLists.txt
pico-sdk/libs/tsdesktop/: CMakeLists.txt
pico-sdk/libs/utils/: CMakeLists.txt
pico-sdk/libs/utils/snakes/: CMakeLists.txt
pico-sdk/libs/xpt2046/: CMakeLists.txt  TSD_XPT2046.cpp  TSD_XPT2046.h
tft/: BufferedDisplay.h  CMakeLists.txt  Display.h  ILI9341_Regs.h  TFT_API.h  TFT_Class.cpp  TFT_Class.h  TFT_Commands.h  TFT_DRIVER.h  TFT_Defines.hh  TFT_Driver.cpp  TFT_Driver.h  TFT_Init.hh  TFT_NONE.h  TFT_NO_DMA.hh  TFT_Protocol.h  TFT_Rotation.hh  TFT_SCREEN.cpp  TFT_SCREEN.h  TFT_SPI.h  TFT_eSPI.h  TFT_eSprite.cpp  TFT_eSprite.h  TSD_ILI9341.cpp  TSD_ILI9341.h
tft_espi/: TFT_eSprite.cpp  TFT_eSprite.h
tools/: tsdfontconvert.py  tsdutf8fontc.cpp
tsdesktop/: Button.cpp  Canvas.cpp  Canvas.h  CheckBox.cpp  Container.cpp  Debug.cpp  Debug.h  DecorTextButton.cpp  Editable.cpp  Editable.h  FieldSet.cpp  GFXButton.cpp  GFXButton.h  GFXObject.cpp  GFXObject.h  GFXStd.cpp  GFXStd.h  GfxButton.h  GfxObject.cpp  GfxObject.h  GfxStd.h  RadioButton.cpp  Scroller.cpp  TSDesktop.h  TextButton.cpp  ValueButton.cpp
utils/: eval.cpp  eval.h
(+304 files in other folders)
